# projet-7-dashboard

./: .gitignore  Procfile  README.md  dashboard.py  dashboard_functions.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
dashboard/: Procfile  dashboard.py  dashboard_functions.py  requirements.txt
