[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["zerippeur <zerippeur@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
pydantic = "^2.5.3"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
sqlalchemy = "^2.0.25"
imblearn = "^0.0"
shap = "^0.44.1"
streamlit-shap = "^1.0.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.2"
nbformat = "^5.9.2"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.9.23"
isort = "^5.10.1"
pylint = "^2.15.5"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"